--- a/styles/style.css
+++ b/styles/style.css
@@ -13,19 +13,264 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  position: relative;
+  display: flex;   /*отдельный элемент */
+  align-items: center;
+  z-index: 0;
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+  .logo {
+    position: absolute;
+  }
+
+  .logo_place_header {
+    width: 183px;
+    height: 32px;
+    top: 30px;
+    left: 64px;
+    z-index: 2;
+  }
+
+  .header__title {
+    width: 730px;
+    margin-left: 64px;
+    font-size: 102px;
+    line-height: 96px;
+    font-weight: bold;
+    z-index: 2;
+  }
+
+  .header__subtitle {
+    position: absolute;
+    width: 388px;
+    left: 64px;
+    bottom: 30px;
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: normal;
+
+  }
+
+  .header__link {
+
+  }
+  /* сделал модификатор микс main-link, чтобы распостранялся на две ссылки. */
+  .main-link {
+    color: #2f80ed;
+    text-decoration: none;
+  }
+
+  .main-link:hover {
+    color: red;
+    transition: .4s;
+  }
+
+  .main-link::after {
+    content: "→";
+    padding-left: 7px;
+  }
+
+  .header__main-illustration {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 765px;
+    height: 608px;
+    z-index: 2;
+  }
+
+  .header__square-pic {
+    height: 568px;
+    width: 568px;
+    position: absolute;
+    background-color: #2f80ed;
+    top: 65px;
+    right: 0;
+    z-index: 1;
+  }
+
+.content {
+
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+  .description {
+    width: 100%;
+    height: 100%;
+    margin-top: 100px;
+    border: 1px solid silver; /* пока что временно */
+  }
+
+    .two-columns {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+
+      .two-columns__brief {
+        width: 175px;
+      }
+
+        .two-columns__brief_title {
+          font-size: 18px;
+          line-height: 1.2;
+          font-weight: normal;
+          color: #2f80ed;
+          margin: 0;
+          padding: 0;
+        }
+
+    .two-columns__main-text {
+      width: 80%;
+      min-width: 784px;
+    }
+
+      .two-columns__paragraph {
+        font-size: 24px;
+        line-height: 34px;
+        font-weight: normal;
+        margin: 0;
+        padding: 0;
+      }
+
+        .two-columns__paragraph_padding-top {
+          padding-top: 30px;
+        }
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: 100px 0;
+  border: 1px solid silver; /* пока что временно */
+}
+
+  .section-title {
+    width: 60%;
+    text-align: center;
+  }
+
+    .section-title__property {
+      font-size: 60px;
+      line-height: 1.15;
+      font-weight: bold;
+      margin: 0;
+      padding: 0;
+    }
+
+  .section-subtitle {
+    width: 60%;
+    text-align: center;
+  }
+
+    .section-subtitle__property {
+      font-size: 24px;
+      line-height: 34px;
+      font-weight: normal;
+      margin: 0;
+      padding: 20px 0 0 0;
+    }
+
+  .table {
+    display: flex;
+    flex-direction: column;
+    width: 1100px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+    .table_flex {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 60px;
+      list-style-type: none;
+    }
+
+    .table__cell {
+      width: 250px;
+      height: 100%;
+      border: 1px solid silver; /* пока что временно */
+    }
+
+      .table__heading {
+        font-size: 24px;
+        line-height: 1.15;
+        font-weight: bold;
+        margin: 0;
+        padding: 0;
+      }
+
+      .table__text {
+        font-size: 18px;
+        line-height: 1.2;
+        font-weight: normal;
+        margin: 0;
+        padding: 20px 0 0 0;
+
+      }
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  /* min-height: 600px; */
+  max-height: 890px;
+  position: relative;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  align-items: center;
+}
+
+  .feynman__title {
+    width: 648px;
+    padding: 100px 0 0 0;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin: 0;
+    font-size: 120px;
+    line-height: 1.15;
+    font-weight: bold;
+    text-align: center;
+    /* z-index: 2; */
+  }
+
+  .feynman__subtitle {
+    padding-top: 70px;
+    margin: 0;
+    font-size: 36px;
+    line-height: 51px;
+    font-weight: normal;
+  }
+
+  .feynman__link {
+    position: absolute;
+    top: 50%;
+    right: 48px;
+    font-size: 36px;
+    line-height: 51px;
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+  }
+.kaufman {
+  width: 100%;
+  height: 100%;
+  padding: 90px 0;
+  background-color: #000000;
+}
+
+  .section-title_theme_dark{
+    color: white;
+  }
+/* .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
-}
+} */
