--- a/styles/style.css
+++ b/styles/style.css
@@ -99,13 +99,14 @@
     width: 100%;
     height: 100%;
     margin-top: 100px;
-    border: 1px solid silver; /* пока что временно */
+    display: flex;
+    justify-content: center;
   }
 
     .two-columns {
-      width: 100%;
+      width: 80%;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
     }
 
       .two-columns__brief {
@@ -144,35 +145,29 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  margin: 100px 0;
-  border: 1px solid silver; /* пока что временно */
+  margin: 0;
+  padding: 100px 0 ;
 }
 
   .section-title {
     width: 60%;
     text-align: center;
+    font-size: 60px;
+    line-height: 1.15;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
   }
-
-    .section-title__property {
-      font-size: 60px;
-      line-height: 1.15;
-      font-weight: bold;
-      margin: 0;
-      padding: 0;
-    }
 
   .section-subtitle {
     width: 60%;
     text-align: center;
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: normal;
+    margin: 0;
+    padding: 20px 0 0 0;
   }
-
-    .section-subtitle__property {
-      font-size: 24px;
-      line-height: 34px;
-      font-weight: normal;
-      margin: 0;
-      padding: 20px 0 0 0;
-    }
 
   .table {
     display: flex;
@@ -193,7 +188,6 @@
     .table__cell {
       width: 250px;
       height: 100%;
-      border: 1px solid silver; /* пока что временно */
     }
 
       .table__heading {
@@ -210,14 +204,13 @@
         font-weight: normal;
         margin: 0;
         padding: 20px 0 0 0;
-
       }
 
 .feynman {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  /* min-height: 600px; */
+  min-height: 600px;
   max-height: 890px;
   position: relative;
   background-color: #f2f2f2;
@@ -230,14 +223,11 @@
   .feynman__title {
     width: 648px;
     padding: 100px 0 0 0;
-    /* margin-left: auto;
-    margin-right: auto; */
     margin: 0;
     font-size: 120px;
     line-height: 1.15;
     font-weight: bold;
     text-align: center;
-    /* z-index: 2; */
   }
 
   .feynman__subtitle {
@@ -258,19 +248,148 @@
     margin: 0;
     padding: 0;
   }
+
 .kaufman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 100%;
   padding: 90px 0;
   background-color: #000000;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
 }
 
   .section-title_theme_dark{
     color: white;
+    z-index: 2;
   }
-/* .table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-} */
+
+  .section-subtitle_theme_dark{
+    color: white;
+    z-index: 2;
+  }
+
+  .table_theme_dark {
+    color: white;
+    z-index: 2;
+  }
+
+    .table_flex_dark {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 80px;
+      list-style-type: none;
+    }
+
+    .table__cell_theme_dark {
+      width: 200px;
+      color: white;
+      margin: 0;
+    }
+
+  .kaufman__triangle {
+    position: absolute;
+    width: 877px;
+    height: 877px;
+    top: 0;
+    right: -210px;
+    background-image: url(../images/kaufman-triangle.svg);
+    z-index: 1;
+    background-size: contain;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    padding: 60px 0 22px 0;
+    margin: 0;
+  }
+
+    .footer__columns {
+      width: 90%;
+      height: 100%;
+      min-height: 350px;
+      display: flex;
+      justify-content: space-between;
+      color: #fff;
+    }
+
+    .footer__columns_content_copyright {
+      flex-basis: 711px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+      .logo_place_footer {
+        width: 183px;
+        height: 35px;
+      }
+
+      .footer__autor {
+        margin: 0;
+        padding: 18px 0;
+        font-size: 18px;
+        line-height: 25px;
+        font-weight: normal;
+      }
+
+    .footer__columns_content_info {
+
+    }
+      .footer__column-heading {
+        font-size: 18px;
+        line-height: 30px;
+        font-weight: bold;
+        margin: 0;
+        padding: 0 0 20px 0;
+      }
+
+      .footer__column-links {
+        display: flex;
+        flex-direction: column;
+        font-size: 18px;
+        line-height: 30px;
+        font-weight: normal;
+        margin: 0;
+        padding: 0 0 16px 0;
+      }
+        .footer__column-link {
+          text-decoration: none;
+          color: #fff;
+        }
+
+        .footer__column-link:hover {
+          color: red;
+          transition: .4s;
+        }
+
+    .footer__columns_content_social {
+      display: flex;
+      flex-direction: column;
+    }
+
+      .footer__social-icon {
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
+      }
+
+      .footer__column-text {
+        font-size: 18px;
+        line-height: 30px;
+        font-weight: normal;
+        padding-left: 10px;
+        margin: 0;
+        vertical-align: middle;
+      }
+
+        .footer__column-link_padding-bottom {
+          padding-bottom: 16px;
+        }
