--- a/styles/style.css
+++ b/styles/style.css
@@ -54,23 +54,22 @@
   }
 
   .header__link {
-
-  }
-  /* сделал модификатор микс main-link, чтобы распостранялся на две ссылки. */
-  .main-link {
-    color: #2f80ed;
     text-decoration: none;
   }
+  /* сделал модификатор микс main-link, чтобы распостранялся на две ссылки. */
+    .main-link {
+      color: #2f80ed;
+    }
 
-  .main-link:hover {
-    color: red;
-    transition: .4s;
-  }
+    .main-link:hover {
+      color: red;
+      transition: .4s;
+    }
 
-  .main-link::after {
-    content: "→";
-    padding-left: 7px;
-  }
+    .main-link::after {
+      content: "→";
+      padding-left: 7px;
+    }
 
   .header__main-illustration {
     position: absolute;
@@ -135,9 +134,9 @@
         padding: 0;
       }
 
-        .two-columns__paragraph_padding-top {
-          padding-top: 30px;
-        }
+      .two-columns__paragraph:nth-child(n+2) {
+        padding: 30px 0 0 0;
+      }
 
 .digits {
   display: flex;
@@ -171,23 +170,22 @@
 
   .table {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
     width: 1100px;
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
 
-    .table_flex {
-      display: flex;
-      justify-content: space-between;
-      padding-top: 60px;
-      list-style-type: none;
-    }
-
     .table__cell {
       width: 250px;
       height: 100%;
+      padding-top: 60px;
+    }
+
+    .table__cell:nth-child(n+5) {
+      padding-top: 60px;
     }
 
       .table__heading {
@@ -247,6 +245,7 @@
     font-weight: normal;
     margin: 0;
     padding: 0;
+    text-decoration: none;
   }
 
 .kaufman {
@@ -256,7 +255,7 @@
   width: 100%;
   height: 100%;
   padding: 90px 0;
-  background-color: #000000;
+  background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
   z-index: 0;
@@ -277,17 +276,11 @@
     z-index: 2;
   }
 
-    .table_flex_dark {
-      display: flex;
-      justify-content: space-between;
-      padding-top: 80px;
-      list-style-type: none;
-    }
-
     .table__cell_theme_dark {
       width: 200px;
       color: white;
       margin: 0;
+      padding-top: 80px;
     }
 
   .kaufman__triangle {
@@ -306,8 +299,8 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    background-color: #000000;
-    padding: 60px 0 22px 0;
+    background-color: #1f1f1f;
+    padding: 60px 0 40px 0;
     margin: 0;
   }
 
@@ -319,11 +312,13 @@
       justify-content: space-between;
       color: #fff;
     }
-
-    .footer__columns_content_copyright {
-      flex-basis: 711px;
+    .footer__column {
       display: flex;
       flex-direction: column;
+    }
+
+    .footer__column_content_copyright {
+      flex-basis: 711px;
       justify-content: space-between;
     }
 
@@ -340,9 +335,10 @@
         font-weight: normal;
       }
 
-    .footer__columns_content_info {
-
+    .footer__column_content_info {
+      flex-basis: auto;
     }
+
       .footer__column-heading {
         font-size: 18px;
         line-height: 30px;
@@ -360,9 +356,14 @@
         margin: 0;
         padding: 0 0 16px 0;
       }
+
         .footer__column-link {
           text-decoration: none;
           color: #fff;
+        }
+
+        .footer__column-link:nth-last-child(1) {
+          padding-bottom: 16px;
         }
 
         .footer__column-link:hover {
@@ -370,9 +371,8 @@
           transition: .4s;
         }
 
-    .footer__columns_content_social {
-      display: flex;
-      flex-direction: column;
+    .footer__column_content_social {
+      flex-basis: auto;
     }
 
       .footer__social-icon {
@@ -390,6 +390,3 @@
         vertical-align: middle;
       }
 
-        .footer__column-link_padding-bottom {
-          padding-bottom: 16px;
-        }
