--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
@@ -15,201 +15,195 @@
   max-height: 756px;
   background-color: #f2f2f2;
   position: relative;
-  display: flex;   /*отдельный элемент */
+  display: flex;
   align-items: center;
   z-index: 0;
-  /* выше установили ограничения для секции */
 }
 
-  .logo {
-    position: absolute;
-  }
+.logo {
+}
 
-  .logo_place_header {
-    width: 183px;
-    height: 32px;
-    top: 30px;
-    left: 64px;
-    z-index: 2;
-  }
+.logo_place_header {
+  position: absolute;
+  width: 183px;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+  z-index: 3;
+}
 
-  .header__title {
-    width: 730px;
-    margin-left: 64px;
-    font-size: 102px;
-    line-height: 96px;
-    font-weight: bold;
-    z-index: 2;
-  }
+.header__title {
+  max-width: 730px;
+  margin: 0 0 0 64px;
+  padding: 0;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: bold;
+  z-index: 3;
+}
 
-  .header__subtitle {
-    position: absolute;
-    width: 388px;
-    left: 64px;
-    bottom: 30px;
-    font-size: 18px;
-    line-height: 25px;
-    font-weight: normal;
+.header__subtitle {
+  position: absolute;
+  width: 388px;
+  left: 64px;
+  bottom: 30px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
 
-  }
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+.header__link::after {
+  content: "→";
+  padding-left: 7px;
+}
 
-  .header__link {
-    text-decoration: none;
-  }
-  /* сделал модификатор микс main-link, чтобы распостранялся на две ссылки. */
-    .main-link {
-      color: #2f80ed;
-    }
+.main-link {
+  transition: 0.4s;
+  /* сделал модификатор-микс main-link, чтобы распостранялся на две ссылки. */
+}
 
-    .main-link:hover {
-      color: red;
-      transition: .4s;
-    }
+.main-link:hover {
+  color: red;
+}
 
-    .main-link::after {
-      content: "→";
-      padding-left: 7px;
-    }
+.header__main-illustration {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 2;
+}
 
-  .header__main-illustration {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 765px;
-    height: 608px;
-    z-index: 2;
-  }
-
-  .header__square-pic {
-    height: 568px;
-    width: 568px;
-    position: absolute;
-    background-color: #2f80ed;
-    top: 65px;
-    right: 0;
-    z-index: 1;
-  }
+.header__square-pic {
+  height: 568px;
+  width: 568px;
+  position: absolute;
+  background-color: #2f80ed;
+  top: 65px;
+  right: 0;
+  z-index: 1;
+}
 
 .content {
-
 }
 
-  .description {
-    width: 100%;
-    height: 100%;
-    margin-top: 100px;
-    display: flex;
-    justify-content: center;
-  }
+.description {
+  width: 100%;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
 
-    .two-columns {
-      width: 80%;
-      display: flex;
-      justify-content: space-around;
-    }
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+}
 
-      .two-columns__brief {
-        width: 175px;
-      }
+.two-columns__brief {
+  width: 175px;
+}
 
-        .two-columns__brief_title {
-          font-size: 18px;
-          line-height: 1.2;
-          font-weight: normal;
-          color: #2f80ed;
-          margin: 0;
-          padding: 0;
-        }
+.two-columns__brief_title {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #2f80ed;
+  margin: 0;
+  padding: 0;
+}
 
-    .two-columns__main-text {
-      width: 80%;
-      min-width: 784px;
-    }
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
 
-      .two-columns__paragraph {
-        font-size: 24px;
-        line-height: 34px;
-        font-weight: normal;
-        margin: 0;
-        padding: 0;
-      }
+.two-columns__paragraph {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
 
-      .two-columns__paragraph:nth-child(n+2) {
-        padding: 30px 0 0 0;
-      }
+.two-columns__paragraph:nth-child(n + 2) {
+  padding: 30px 0 0 0;
+}
 
+.two-columns__span-accent {
+  font-weight: bold;
+}
 .digits {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: 100px 0;
 }
 
-  .section-title {
-    width: 60%;
-    text-align: center;
-    font-size: 60px;
-    line-height: 1.15;
-    font-weight: bold;
-    margin: 0;
-    padding: 0;
-  }
+.section-title {
+  width: 60%;
+  text-align: center;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
 
-  .section-subtitle {
-    width: 60%;
-    text-align: center;
-    font-size: 24px;
-    line-height: 34px;
-    font-weight: normal;
-    margin: 0;
-    padding: 20px 0 0 0;
-  }
+.section-subtitle {
+  width: 60%;
+  text-align: center;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  margin: 0;
+  padding: 20px 0 0 0;
+}
 
-  .table {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 1100px;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
-    .table__cell {
-      width: 250px;
-      height: 100%;
-      padding-top: 60px;
-    }
+.table__cell {
+  width: 250px;
+  padding-top: 60px;
+}
 
-    .table__cell:nth-child(n+5) {
-      padding-top: 60px;
-    }
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
 
-      .table__heading {
-        font-size: 24px;
-        line-height: 1.15;
-        font-weight: bold;
-        margin: 0;
-        padding: 0;
-      }
-
-      .table__text {
-        font-size: 18px;
-        line-height: 1.2;
-        font-weight: normal;
-        margin: 0;
-        padding: 20px 0 0 0;
-      }
+.table__text {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  margin: 0;
+  padding: 20px 0 0 0;
+}
 
 .feynman {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  min-height: 600px;
-  max-height: 890px;
+  min-height: 890px;
   position: relative;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
@@ -218,42 +212,46 @@
   align-items: center;
 }
 
-  .feynman__title {
-    width: 648px;
-    padding: 100px 0 0 0;
-    margin: 0;
-    font-size: 120px;
-    line-height: 1.15;
-    font-weight: bold;
-    text-align: center;
-  }
+.feynman__title {
+  width: 648px;
+  margin: 100px 0 0 0;
+  padding: 0;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: bold;
+  text-align: center;
+}
 
-  .feynman__subtitle {
-    padding-top: 70px;
-    margin: 0;
-    font-size: 36px;
-    line-height: 51px;
-    font-weight: normal;
-  }
+.feynman__subtitle {
+  padding-top: 70px;
+  margin: 0;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+}
 
-  .feynman__link {
-    position: absolute;
-    top: 50%;
-    right: 48px;
-    font-size: 36px;
-    line-height: 51px;
-    font-weight: normal;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-  }
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+.feynman__link::after {
+  content: "→";
+  padding-left: 7px;
+}
 
 .kaufman {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
   padding: 90px 0;
   background-color: #1f1f1f;
   position: relative;
@@ -261,132 +259,124 @@
   z-index: 0;
 }
 
-  .section-title_theme_dark{
-    color: white;
-    z-index: 2;
-  }
+.section-title_theme_dark {
+  color: white;
+  z-index: 2;
+}
 
-  .section-subtitle_theme_dark{
-    color: white;
-    z-index: 2;
-  }
+.section-subtitle_theme_dark {
+  color: white;
+  z-index: 2;
+}
 
-  .table_theme_dark {
-    color: white;
-    z-index: 2;
-  }
+.table_theme_dark {
+  color: white;
+  z-index: 2;
+}
 
-    .table__cell_theme_dark {
-      width: 200px;
-      color: white;
-      margin: 0;
-      padding-top: 80px;
-    }
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin: 0;
+  padding-top: 80px;
+}
 
-  .kaufman__triangle {
-    position: absolute;
-    width: 877px;
-    height: 877px;
-    top: 0;
-    right: -210px;
-    background-image: url(../images/kaufman-triangle.svg);
-    z-index: 1;
-    background-size: contain;
-  }
+.kaufman__triangle {
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  top: 0;
+  right: -210px;
+  background-image: url(../images/kaufman-triangle.svg);
+  z-index: 1;
+  background-size: contain;
+}
 
-  .footer {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: #1f1f1f;
-    padding: 60px 0 40px 0;
-    margin: 0;
-  }
+.footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  padding: 60px 0 40px 0;
+  margin: 0;
+}
 
-    .footer__columns {
-      width: 90%;
-      height: 100%;
-      min-height: 350px;
-      display: flex;
-      justify-content: space-between;
-      color: #fff;
-    }
-    .footer__column {
-      display: flex;
-      flex-direction: column;
-    }
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+}
 
-    .footer__column_content_copyright {
-      flex-basis: 711px;
-      justify-content: space-between;
-    }
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
 
-      .logo_place_footer {
-        width: 183px;
-        height: 35px;
-      }
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  justify-content: space-between;
+}
 
-      .footer__autor {
-        margin: 0;
-        padding: 18px 0;
-        font-size: 18px;
-        line-height: 25px;
-        font-weight: normal;
-      }
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+}
 
-    .footer__column_content_info {
-      flex-basis: auto;
-    }
+.footer__autor {
+  margin: 0;
+  padding: 18px 0;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
 
-      .footer__column-heading {
-        font-size: 18px;
-        line-height: 30px;
-        font-weight: bold;
-        margin: 0;
-        padding: 0 0 20px 0;
-      }
+.footer__column_content_info {
+  flex-basis: auto;
+}
 
-      .footer__column-links {
-        display: flex;
-        flex-direction: column;
-        font-size: 18px;
-        line-height: 30px;
-        font-weight: normal;
-        margin: 0;
-        padding: 0 0 16px 0;
-      }
+.footer__column-heading {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0 0 20px 0;
+}
 
-        .footer__column-link {
-          text-decoration: none;
-          color: #fff;
-        }
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0 0 16px 0;
+  list-style-type: none;
+}
 
-        .footer__column-link:nth-last-child(1) {
-          padding-bottom: 16px;
-        }
+.footer__column-link {
+  text-decoration: none;
+  color: #fff;
+}
 
-        .footer__column-link:hover {
-          color: red;
-          transition: .4s;
-        }
+.footer__column-link:nth-last-child(1) {
+  padding-bottom: 16px;
+}
 
-    .footer__column_content_social {
-      flex-basis: auto;
-    }
+.footer__column-link:hover {
+  color: red;
+  transition: 0.4s;
+}
 
-      .footer__social-icon {
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
-      }
+.footer__column_content_social {
+  flex-basis: auto;
+}
 
-      .footer__column-text {
-        font-size: 18px;
-        line-height: 30px;
-        font-weight: normal;
-        padding-left: 10px;
-        margin: 0;
-        vertical-align: middle;
-      }
-
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+  padding-right: 10px;
+}
