Изменение микса rotation

--- a/blocks/page/content/kaufman/rotation/__kaufman/rotation__kaufman.css
+++ b/blocks/page/content/kaufman/rotation/__kaufman/rotation__kaufman.css
@@ -1,6 +1,7 @@
- .square-pic__rotation {
+.rotation__kaufman {
   -moz-animation: move 20s linear 0s infinite;
   -webkit-animation: move 20s linear 0s infinite;
   -o-animation: move 20s linear 0s infinite;
   animation: move 20s linear 0s infinite;
-}
+  }
+
