--- a/blocks/page/header/rotation/__header/rotation__header.css
+++ b/blocks/page/header/rotation/__header/rotation__header.css
@@ -1,7 +1,6 @@
-.triangle__rotation {
+ .rotation__header {
   -moz-animation: move 20s linear 0s infinite;
   -webkit-animation: move 20s linear 0s infinite;
   -o-animation: move 20s linear 0s infinite;
   animation: move 20s linear 0s infinite;
-  }
-
+}
