Попытка 2 с изменением микса блока rotation

--- a/blocks/page/content/kaufman/rotation/_triangle/rotation_triangle.css
+++ b/blocks/page/content/kaufman/rotation/_triangle/rotation_triangle.css
@@ -1,6 +1,7 @@
- .rotation__header {
+.rotation_triangle {
   -moz-animation: move 20s linear 0s infinite;
   -webkit-animation: move 20s linear 0s infinite;
   -o-animation: move 20s linear 0s infinite;
   animation: move 20s linear 0s infinite;
-}
+  }
+
