--- a/blocks/page/content/khan/__container/__book-container/__buy-link/khan__buy-link.css
+++ b/blocks/page/content/khan/__container/__book-container/__buy-link/khan__buy-link.css
@@ -5,7 +5,8 @@
   line-height: 42px;
   font-weight: normal;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 48px;
+  align-self: baseline;
 }
 .khan__buy-link::after {
   content: "→";
