--- a/blocks/page/header/rotation/rotation.css
+++ b/blocks/page/header/rotation/rotation.css
@@ -1,3 +1,10 @@
+.rotation {
+  -moz-animation: move 20s linear 0s infinite;
+  -webkit-animation: move 20s linear 0s infinite;
+  -o-animation: move 20s linear 0s infinite;
+  animation: move 20s linear 0s infinite;
+}
+
 @keyframes move {
   from {
       transform: rotate(0deg);
