Работа над ошибками №2 второй проектной работы

--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,7 +5,7 @@
   line-height: 42px;
   font-weight: normal;
   margin: 0;
-  padding: 0 0 0 48px;
+  padding: 0;
   align-self: baseline;
 }
 .khan__buy-link::after {
