--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,6 +3,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, 240px);
   grid-gap: 0 100px;
+  margin: 0;
+  padding: 0;
 }
 
   /* вариант кода c использованием flex */
@@ -11,4 +13,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0 100px;
+  margin: 0;
+  padding: 0;
 } */
